Fixed views, added enter functionality

--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -1,6 +1,6 @@
 .searchbar-container{
-    margin-top: 10px;
-    background-color: rgb(224, 224, 224);
+    margin-top: 50px;
+    background-color: #40ff80;  
     padding: 20px;
     border-radius: 10px;
 }
