--- a/src/Nominations.css
+++ b/src/Nominations.css
@@ -1,10 +1,15 @@
 .nominations-container{
     margin-top: 10px;
-    background-color: rgb(224, 224, 224);
+    background-color: #004c3f;
     padding: 20px;
     border-radius: 10px;
+    color: white;
 }
 
 .nominations-listgroup{
     padding: 5em;
+}
+
+.nominations-listgroupitem{
+    border-radius: 5px;
 }
