Added better views and complete message

--- a/src/Nominations.css
+++ b/src/Nominations.css
@@ -1,6 +1,6 @@
 .nominations-container{
     margin-top: 10px;
-    background-color: #004c3f;
+    background-color: #DD7373;
     padding: 20px;
     border-radius: 10px;
     color: white;
