--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -1,6 +1,14 @@
 .searchbar-container{
-    margin-top: 50px;
-    background-color: #40ff80;  
+    margin-top: 2em;
+    background-color: #EEF5DB;  
     padding: 20px;
     border-radius: 10px;
+}
+
+.searchbar-button{
+    background-color: #49B6FF !important;
+}
+
+.searchbar-button:hover{
+    background-color: #3a90ca !important;
 }
